k8s-practice2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: artur303/k8s-practice2:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.1"
              memory: "100Mi"
            limits:
              cpu: "0.1"
              memory: "100Mi"
